instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:16: error: ')' expected but integer literal found.
  x += 1
       ^