instructions.InstructionsDrawG.scala.code
/*
On va faire un G
*/
baisseBrosse()
var x:Int = 1
var y:Int = 1
gauche()
while (x <= 3)
{
	gauche()
  while (y <= 4
		{
      avance()
    	y += 1
    }
  x += 1
}
  
  